--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,10 +14,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.6",
     "@types/react-responsive": "^8.0.5",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
+    "react-calendar": "^4.3.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
