--- a/front_end/package.json
+++ b/front_end/package.json
@@ -19,6 +19,7 @@
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.6",
     "@types/react-responsive": "^8.0.5",
+    "express": "^4.18.2",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
@@ -28,6 +29,8 @@
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "redux-logger": "^3.0.6",
     "styled-components": "^6.0.2",
     "twin.macro": "^3.3.1",
     "typescript": "^4.9.5",
@@ -62,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
